--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -4,7 +4,8 @@
   align-items: center;
   justify-content: center;
 
-  background: url(../../assets/background.jpg) no-repeat center fixed;
+  //background: url(../../assets/background.jpg) no-repeat center fixed;
+  background: #eeeeee;
   -webkit-background-size: cover; /* pour anciens Chrome et Safari */
   background-size: cover; /* version standardisée */
 
