--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,7 +10,8 @@
       <a mat-list-item routerLink="/">Home</a>
     </mat-nav-list>
   </mat-sidenav>
-  <mat-sidenav-content>
+  <mat-sidenav-content fxFlex>
+
     <router-outlet></router-outlet>
   </mat-sidenav-content>
 </mat-sidenav-container>
