--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,1 +1,8 @@
-@import '~@angular/material/prebuilt-themes/purple-green.css';
+@import '~@angular/material/prebuilt-themes/deeppurple-amber.css';
+
+
+html, body, app-root, mat-sidenav-container{
+  height: 100%;
+  width: 100%;
+  margin: 0;
+}
