--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,35 @@
-<router-outlet></router-outlet>
+<mat-toolbar color="primary">
+  <mat-toolbar-row>
+    <button mat-icon-button (click)="snav.toggle()">
+      <mat-icon>menu</mat-icon>
+    </button>
+    <h1>Studio</h1>
+    <button mat-icon-button routerLink="setting">
+      <mat-icon>settings</mat-icon>
+    </button>
+    <form>
+      <mat-form-field>
+
+        <input matInput type="text" placeholder="Service ID">
+      </mat-form-field>
+    </form>
+  </mat-toolbar-row>
+</mat-toolbar>
+<mat-sidenav-container>
+  <mat-sidenav #snav [mode]="'over'">
+    <mat-nav-list>
+      <a mat-list-item routerLink="/first" (click)="snav.close()">
+        <mat-icon>home</mat-icon>
+        첫페이지</a>
+      <a mat-list-item routerLink="/caster" (click)="snav.close()">
+        <mat-icon>caster</mat-icon>
+        방송하기</a>
+      <a mat-list-item routerLink="/setting" (click)="snav.close()">
+        <mat-icon>settings</mat-icon>
+        설정하기</a>
+    </mat-nav-list>
+  </mat-sidenav>
+  <mat-sidenav-content fxFlex>
+    <router-outlet></router-outlet>
+  </mat-sidenav-content>
+</mat-sidenav-container>
