--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,16 +1,1 @@
-<mat-toolbar color="primary">
-  <button mat-icon-button (click)="snav.toggle()">
-    <mat-icon>menu</mat-icon>
-  </button>
-  <h1>Studio</h1>
-</mat-toolbar>
-<mat-sidenav-container>
-  <mat-sidenav #snav [mode]="'over'">
-    <mat-nav-list>
-      <a mat-list-item routerLink="/home">Home</a>
-    </mat-nav-list>
-  </mat-sidenav>
-  <mat-sidenav-content fxFlex>
-    <router-outlet></router-outlet>
-  </mat-sidenav-content>
-</mat-sidenav-container>
+<p>Home work</p>
