--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,8 +16,11 @@
         <mat-icon>home</mat-icon>
         첫페이지</a>
       <a mat-list-item routerLink="/caster" (click)="snav.close()">
-        <mat-icon>caster</mat-icon>
+        <mat-icon>cast</mat-icon>
         방송하기</a>
+      <a mat-list-item routerLink="/viewer" (click)="snav.close()">
+        <mat-icon>desktop_mac</mat-icon>
+        방송보기</a>
       <a mat-list-item routerLink="/setting" (click)="snav.close()">
         <mat-icon>settings</mat-icon>
         설정하기</a>
