--- a/src/app/caster/caster.component.html
+++ b/src/app/caster/caster.component.html
@@ -8,7 +8,7 @@
       <mat-card-content>
         <div fxFlex class="embed-responsive embed-responsive-16by9" (mouseover)="onEnterOverPlayer($event)"
              (mouseleave)="onLeavePlayer($event)">
-          <video #v_src [srcObject]="v_src_obj" [src]="v_src" autoplay class="embed-responsive-item">
+          <video #v_src [srcObject]="v_src_obj" [src]="" autoplay class="embed-responsive-item">
             <mat-icon class="vertial-center center-button">videocam_off</mat-icon>
           </video>
           <!--          <div class="embed-responsive-item" [fxShow]="isShowSrcBtn">-->
