--- a/src/app/viewer/viewer.component.html
+++ b/src/app/viewer/viewer.component.html
@@ -6,7 +6,7 @@
       </mat-card-header>
       <mat-card-content>
         <div fxFlex class="embed-responsive embed-responsive-16by9">
-          <video id="viewer" #v_src [srcObject]="v_src_obj" [src]="" autoplay class="embed-responsive-item">
+          <video id="viewer" autoplay controls class="embed-responsive-item">
             <mat-icon class="vertial-center center-button">videocam_off</mat-icon>
           </video>
           <!--          <div class="embed-responsive-item" [fxShow]="isShowSrcBtn">-->
