--- a/src/app/caster/caster.component.html
+++ b/src/app/caster/caster.component.html
@@ -26,7 +26,7 @@
       </mat-card-header>
       <mat-card-content>
         <div fxFlex class="embed-responsive embed-responsive-16by9">
-          <video id="v_cast" #v_dst autoplay class="embed-responsive-item">
+          <video id="v_cast" #v_dst autoplay controls class="embed-responsive-item">
             <mat-icon class="vertial-center center-button">videocam_off</mat-icon>
           </video>
         </div>
