--- a/src/app/caster/caster.component.html
+++ b/src/app/caster/caster.component.html
@@ -1,6 +1,8 @@
 <div class="container-fluid mt-3">
   <div fxFlex fxLayout="row wrap" fxLayoutAlign="center stretch" fxLayoutGap="20px">
-
+    <video fxflex id="v_cast"  autoplay controls muted class="embed-responsive-item">
+      <mat-icon class="vertial-center center-button">videocam_off</mat-icon>
+    </video>
     <mat-card fxFlex>
       <mat-card-header>
         <mat-card-title>원본영상</mat-card-title>
@@ -8,7 +10,7 @@
       <mat-card-content>
         <div fxFlex class="embed-responsive embed-responsive-16by9" (mouseover)="onEnterOverPlayer($event)"
              (mouseleave)="onLeavePlayer($event)">
-          <video #v_src [srcObject]="v_src_obj" [src]="" autoplay class="embed-responsive-item">
+          <video #v_src [srcObject]="v_src_obj" muted autoplay class="embed-responsive-item">
             <mat-icon class="vertial-center center-button">videocam_off</mat-icon>
           </video>
           <!--          <div class="embed-responsive-item" [fxShow]="isShowSrcBtn">-->
@@ -26,7 +28,7 @@
       </mat-card-header>
       <mat-card-content>
         <div fxFlex class="embed-responsive embed-responsive-16by9">
-          <video id="v_cast" #v_dst autoplay controls class="embed-responsive-item">
+          <video id="video" #v_dst autoplay controls muted class="embed-responsive-item">
             <mat-icon class="vertial-center center-button">videocam_off</mat-icon>
           </video>
         </div>
