--- a/src/app/branch-caster/branch-caster.component.html
+++ b/src/app/branch-caster/branch-caster.component.html
@@ -1,24 +1,6 @@
 <div class="container-fluid mt-3">
   <div fxFlex fxLayout="row wrap" fxLayoutAlign="center stretch" fxLayoutGap="20px">
-        <mat-card fxFlex>
-      <mat-card-header>
-        <mat-card-title>원본영상</mat-card-title>
-      </mat-card-header>
-      <mat-card-content>
-        <div fxFlex class="embed-responsive embed-responsive-16by9" (mouseover)="onEnterOverPlayer($event)"
-             (mouseleave)="onLeavePlayer($event)">
-          <video #v_src [srcObject]="v_src_obj" muted autoplay class="embed-responsive-item">
-            <mat-icon class="vertial-center center-button">videocam_off</mat-icon>
-          </video>
-          <!--          <div class="embed-responsive-item" [fxShow]="isShowSrcBtn">-->
-          <!--            <button class="vertial-center" mat-icon-button (click)="onClickPlay($event)">-->
-          <!--              <mat-icon class="center-button">{{play_status}}</mat-icon>-->
-          <!--            </button>-->
-          <!--          </div>-->
-        </div>
-      </mat-card-content>
-      <mat-card-actions></mat-card-actions>
-    </mat-card>
+    <div fxFlex="20"></div>
     <mat-card fxFlex>
       <mat-card-header>
         <mat-card-title>송출영상</mat-card-title>
@@ -32,6 +14,7 @@
       </mat-card-content>
       <mat-card-actions></mat-card-actions>
     </mat-card>
+    <div fxFlex="20"></div>
   </div>
 </div>
 
@@ -53,13 +36,6 @@
                         [value]="device.value">{{device.viewValue}}</mat-option>
           </mat-select>
         </mat-form-field>
-        <!--        <mat-form-field fxFlex>-->
-        <!--          <mat-label>Desktop Capture</mat-label>-->
-        <!--          <mat-select [(ngModel)]="selectedVideoDevice" (selectionChange)="onChangeDesktopSource($event)">-->
-        <!--            <mat-option *ngFor="let device of c_devices | async"-->
-        <!--                        [value]="getDesktopId(device.id)">{{device.name}}</mat-option>-->
-        <!--          </mat-select>-->
-        <!--        </mat-form-field>-->
       </div>
     </div>
     <div fxFlex class="container-fluid mt-1">
@@ -105,17 +81,13 @@
       </div>
       <div class="container-fluid">
         <div fxFlex fxLayout="row wrap" fxLayoutAlign="start stretch" fxLayoutGap="3px">
-          <button fxFlex mat-icon-button mat-stroked-button (click)="onLiveCastStart($event)" [disabled]="isLive" >
+          <button fxFlex mat-icon-button mat-stroked-button [disabled]="isCast" (click)="onLiveCastStart($event)">
             <mat-icon>cast</mat-icon>
-            방송시작
+            연결시작
           </button>
-<!--          <button fxFlex mat-icon-button mat-stroked-button (click)="onLiveCastSwitch($event)">-->
-<!--            <mat-icon>switch_video</mat-icon>-->
-<!--            화면변경-->
-<!--          </button>-->
-          <button fxFlex mat-icon-button mat-stroked-button (click)="onLiveCastStop($event)" [disabled]="!isLive">
+          <button fxFlex mat-icon-button mat-stroked-button [disabled]="!isCast" (click)="onLiveCastStop($event)">
             <mat-icon>stop_screen_share</mat-icon>
-            방송종료
+            연결종료
           </button>
         </div>
       </div>
@@ -132,36 +104,6 @@
     <mat-accordion fxFlex>
       <mat-expansion-panel>
         <mat-expansion-panel-header>
-          <mat-panel-title>Connections</mat-panel-title>
-          <mat-panel-description>{{connections}}</mat-panel-description>
-        </mat-expansion-panel-header>
-        <table mat-table fxFlexFill [dataSource]="dataSource">
-          <ng-container matColumnDef="Branch">
-            <th mat-header-cell *matHeaderCellDef>지점</th>
-            <td mat-cell *matCellDef="let element">{{element.Branch}}</td>
-          </ng-container>
-          <ng-container matColumnDef="Resolution">
-            <th mat-header-cell *matHeaderCellDef>해상도</th>
-            <td mat-cell *matCellDef="let element">{{element.Resolution}}</td>
-          </ng-container>
-          <ng-container matColumnDef="Speed">
-            <th mat-header-cell *matHeaderCellDef>속도</th>
-            <td mat-cell *matCellDef="let element">{{element.Speed}}</td>
-          </ng-container>
-          <tr mat-header-row *matHeaderRowDef="displayColumns"></tr>
-          <tr mat-row *matRowDef="let row; columns: displayColumns;"></tr>
-
-        </table>
-        <mat-paginator [pageSizeOptions]="[10, 25, 50]" showFirstLastButtons></mat-paginator>
-      </mat-expansion-panel>
-    </mat-accordion>
-  </div>
-</div>
-<div class="container-fluid mt-1">
-  <div fxFlex fxLayout="row wrap" fxLayoutAlign="start strech" fxLayoutGap="5px">
-    <mat-accordion fxFlex>
-      <mat-expansion-panel>
-        <mat-expansion-panel-header>
           <mat-panel-title>LOGS</mat-panel-title>
         </mat-expansion-panel-header>
         <mat-form-field fxFlex>
@@ -171,3 +113,4 @@
     </mat-accordion>
   </div>
 </div>
+
