--- a/src/app/first/first.component.html
+++ b/src/app/first/first.component.html
@@ -12,7 +12,7 @@
           <a fxflex mat-raised-button routerLink="/branch-caster" color="accent">지점 송출</a>
         </mat-grid-tile>
         <mat-grid-tile>
-          <a fxflex mat-raised-button routerLink="/branch-caster-list" color="accent">지점 송출 목록</a>
+          <a fxflex mat-raised-button routerLink="/branch-viewer-list" color="accent">지점 송출 목록</a>
         </mat-grid-tile>
       </mat-grid-list>
 <!--    </div>-->
