--- a/src/app/branch-viewer/branch-viewer.component.html
+++ b/src/app/branch-viewer/branch-viewer.component.html
@@ -23,7 +23,7 @@
 <div class="container-fluid mt-3">
   <div fxFlex fxLayout="row wrap" fxLayoutAlign="start strech" fxLayoutGap="5px">
     <button fxFlex mat-stroked-button (click)="fullsize($event)">전체화면</button>
-    <button fxFlex mat-stroked-button (click)="refresh($event)">재로딩</button>
+    <button fxFlex mat-stroked-button (click)="refresh($event)">연결끊기</button>
   </div>
 </div>
 <div class="container-fluid mt-1">
