--- a/src/app/branch-caster/branch-caster.component.html
+++ b/src/app/branch-caster/branch-caster.component.html
@@ -29,13 +29,13 @@
                         [value]="device.value">{{device.viewValue}}</mat-option>
           </mat-select>
         </mat-form-field>
-<!--        <mat-form-field fxFlex>-->
-<!--          <mat-label>Capture Audio Devices</mat-label>-->
-<!--          <mat-select [(ngModel)]="selectedAudioDevice" (selectionChange)="onChangeAudioSource($event)">-->
-<!--            <mat-option *ngFor="let device of a_devices | async"-->
-<!--                        [value]="device.value">{{device.viewValue}}</mat-option>-->
-<!--          </mat-select>-->
-<!--        </mat-form-field>-->
+        <mat-form-field fxFlex>
+          <mat-label>Capture Audio Devices</mat-label>
+          <mat-select [(ngModel)]="selectedAudioDevice" (selectionChange)="onChangeAudioSource($event)">
+            <mat-option *ngFor="let device of a_devices | async"
+                        [value]="device.value">{{device.viewValue}}</mat-option>
+          </mat-select>
+        </mat-form-field>
       </div>
     </div>
     <div fxFlex class="container-fluid mt-1">
