--- a/src/app/caster/caster.component.html
+++ b/src/app/caster/caster.component.html
@@ -127,36 +127,36 @@
     <mat-divider fxFlex></mat-divider>
   </div>
 </div>
-<div class="container-fluid mt-1">
-  <div fxFlex fxLayout="row wrap" fxLayoutAlign="start strech" fxLayoutGap="5px">
-    <mat-accordion fxFlex>
-      <mat-expansion-panel>
-        <mat-expansion-panel-header>
-          <mat-panel-title>Connections</mat-panel-title>
-          <mat-panel-description>{{connections}}</mat-panel-description>
-        </mat-expansion-panel-header>
-        <table mat-table fxFlexFill [dataSource]="dataSource">
-          <ng-container matColumnDef="Branch">
-            <th mat-header-cell *matHeaderCellDef>지점</th>
-            <td mat-cell *matCellDef="let element">{{element.Branch}}</td>
-          </ng-container>
-          <ng-container matColumnDef="Resolution">
-            <th mat-header-cell *matHeaderCellDef>해상도</th>
-            <td mat-cell *matCellDef="let element">{{element.Resolution}}</td>
-          </ng-container>
-          <ng-container matColumnDef="Speed">
-            <th mat-header-cell *matHeaderCellDef>속도</th>
-            <td mat-cell *matCellDef="let element">{{element.Speed}}</td>
-          </ng-container>
-          <tr mat-header-row *matHeaderRowDef="displayColumns"></tr>
-          <tr mat-row *matRowDef="let row; columns: displayColumns;"></tr>
+<!--<div class="container-fluid mt-1">-->
+<!--  <div fxFlex fxLayout="row wrap" fxLayoutAlign="start strech" fxLayoutGap="5px">-->
+<!--    <mat-accordion fxFlex>-->
+<!--      <mat-expansion-panel>-->
+<!--        <mat-expansion-panel-header>-->
+<!--          <mat-panel-title>Connections</mat-panel-title>-->
+<!--          <mat-panel-description>{{connections}}</mat-panel-description>-->
+<!--        </mat-expansion-panel-header>-->
+<!--        <table mat-table fxFlexFill [dataSource]="dataSource">-->
+<!--          <ng-container matColumnDef="Branch">-->
+<!--            <th mat-header-cell *matHeaderCellDef>지점</th>-->
+<!--            <td mat-cell *matCellDef="let element">{{element.Branch}}</td>-->
+<!--          </ng-container>-->
+<!--          <ng-container matColumnDef="Resolution">-->
+<!--            <th mat-header-cell *matHeaderCellDef>해상도</th>-->
+<!--            <td mat-cell *matCellDef="let element">{{element.Resolution}}</td>-->
+<!--          </ng-container>-->
+<!--          <ng-container matColumnDef="Speed">-->
+<!--            <th mat-header-cell *matHeaderCellDef>속도</th>-->
+<!--            <td mat-cell *matCellDef="let element">{{element.Speed}}</td>-->
+<!--          </ng-container>-->
+<!--          <tr mat-header-row *matHeaderRowDef="displayColumns"></tr>-->
+<!--          <tr mat-row *matRowDef="let row; columns: displayColumns;"></tr>-->
 
-        </table>
-        <mat-paginator [pageSizeOptions]="[10, 25, 50]" showFirstLastButtons></mat-paginator>
-      </mat-expansion-panel>
-    </mat-accordion>
-  </div>
-</div>
+<!--        </table>-->
+<!--        <mat-paginator [pageSizeOptions]="[10, 25, 50]" showFirstLastButtons></mat-paginator>-->
+<!--      </mat-expansion-panel>-->
+<!--    </mat-accordion>-->
+<!--  </div>-->
+<!--</div>-->
 <div class="container-fluid mt-1">
   <div fxFlex fxLayout="row wrap" fxLayoutAlign="start strech" fxLayoutGap="5px">
     <mat-accordion fxFlex>
